llvm/dev/escapes.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: llvm/dev/escapes.llvm:8:7: error: value doesn't match function result type 'void'
  ret i32 0
      ^
